--- a/index.html
+++ b/index.html
@@ -1,161 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cosmic Pressure and Containment Theory</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cosmic Pressure and Containment: A Theoretical Framework</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to right, #f0f4f8, #e0f7fa);
+      background: linear-gradient(135deg, #eef6ff, #ffffff);
       margin: 0;
       padding: 0;
-      color: #1a1a1a;
-      line-height: 1.8;
+      color: #102030;
     }
     header {
-      background-color: #004d99;
+      background: linear-gradient(90deg, #005588, #003344);
       color: white;
-      padding: 1.5rem;
+      padding: 30px 20px;
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    nav {
+      background: #0077cc;
+      padding: 12px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
     }
     nav a {
-      color: #ffffff;
-      margin: 0 1rem;
+      color: white;
       text-decoration: none;
       font-weight: bold;
+      padding: 10px 18px;
+      border-radius: 20px;
+      background-color: rgba(255, 255, 255, 0.1);
     }
     nav a:hover {
-      text-decoration: underline;
+      background-color: #005f99;
     }
-    main {
-      max-width: 1000px;
-      background-color: #ffffff;
-      margin: 2rem auto;
-      padding: 2rem;
+    .container {
+      max-width: 900px;
+      background: white;
+      margin: 30px auto;
+      padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
-    h1, h2 {
-      color: #0d47a1;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      line-height: 1.8;
     }
     h2 {
-      border-bottom: 2px solid #90caf9;
-      padding-bottom: 0.3rem;
+      color: #003344;
+      margin-top: 1.5em;
+    }
+    p, li {
+      font-size: 1.1rem;
+    }
+    img {
+      display: block;
+      max-width: 100%;
+      margin: 25px auto;
+      border-radius: 10px;
+      box-shadow: 0 5px 12px rgba(0,0,0,0.15);
     }
     footer {
+      background: #003344;
+      color: white;
       text-align: center;
-      font-size: 0.9rem;
-      color: #555;
-      padding: 1.5rem;
-      background-color: #f5f5f5;
-      margin-top: 2rem;
-    }
-    ul, ol {
-      padding-left: 1.5rem;
-    }
-    li {
-      margin-bottom: 0.6rem;
+      padding: 20px;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <header>
-    <nav>
-      <a href="index.html">🏠 Home</a> |
-      <a href="urdu.html">Urdu</a> |
-      <a href="arabic.html">Arabic</a> |
-      <a href="argument.html">Scientific Arguments</a> |
-      <a href="about.html">About</a>
-    </nav>
+    <h1>Cosmic Pressure and Containment</h1>
+    <p>A Theoretical Framework by Usman Madni | Email: madniusman13@gmail.com</p>
   </header>
 
-  <main>
-    <h1>Cosmic Pressure and Containment: A Theoretical Framework</h1>
-    <p><strong>Author:</strong> Usman Madni | <strong>Email:</strong> madniusman13@gmail.com</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="urdu.html">Urdu</a>
+    <a href="arabic.html">Arabic</a>
+    <a href="argument.html">Scientific Argument</a>
+  </nav>
 
+  <div class="container">
     <h2>Abstract</h2>
     <p>
-      This paper presents the Cosmic Pressure and Containment (CPC) theory, proposing that the structure and stability of the universe result from a balance between internal pressure and external containment, offering a new perspective beyond gravity-only models.
+      This paper introduces the "Cosmic Pressure and Containment (CPC)" theory, based on the idea that the universe maintains its structure through a balance between internal pressure and external containment. It challenges the gravity-only model and offers new explanations for cosmic expansion, galactic motions, and light behavior.
     </p>
 
     <h2>1. Introduction</h2>
     <p>
-      Traditional cosmology attributes cosmic behavior to gravitational forces. However, observations like accelerating expansion and galaxy stability suggest that pressure may play a vital role. The CPC theory introduces pressure-containment equilibrium as a governing mechanism.
+      Modern cosmology explains universal structure and motion primarily through gravity, under General Relativity. However, observations such as accelerated expansion, galaxy rotation curves, and stability of cosmic structures call for alternative models. CPC suggests that cosmic pressure, balanced by external containment, governs universal stability and introduces a new paradigm.
     </p>
 
-    <h2>2. Ten Scientific Arguments for CPC Theory</h2>
+    <h2>2. Ten Scientific Arguments Supporting CPC</h2>
     <ol>
-      <li><strong>Universal Expansion:</strong> Contrary to gravitational expectations, galaxies move apart, suggesting an internal pressure.</li>
-      <li><strong>Maintained Balance:</strong> The universe has not collapsed, implying a counteracting force to gravity.</li>
-      <li><strong>Black Holes & Neutron Stars:</strong> Extreme gravitational objects remain stable — suggesting containment.</li>
-      <li><strong>CMBR Uniformity:</strong> Cosmic background radiation is almost identical everywhere — indicating universal pressure.</li>
-      <li><strong>Matter-Antimatter Imbalance:</strong> May result from containment dynamics post-Big Bang.</li>
-      <li><strong>Quantum Vacuum Pressure:</strong> As evident from the Casimir Effect.</li>
-      <li><strong>Gravity's Limitations:</strong> Cannot be unified with quantum physics yet.</li>
-      <li><strong>Universe Edges:</strong> A finite universe suggests structural boundaries or a containment field.</li>
-      <li><strong>Architectural Analogy:</strong> Like a pressurized bubble with surface tension maintaining form.</li>
-      <li><strong>Natural Pressure Systems:</strong> Like blood pressure or atmospheric systems — nature favors pressure balance.</li>
+      <li><strong>Ongoing Expansion:</strong> Galaxies are receding, suggesting an internal pressure counteracting gravity.</li>
+      <li><strong>Stable Cosmic Balance:</strong> Gravity alone would cause collapse, but cosmic balance implies containment.</li>
+      <li><strong>Black Holes & Neutron Stars:</strong> Their containment despite immense gravity indicates pressure boundaries.</li>
+      <li><strong>CMB Uniformity:</strong> The cosmic microwave background’s uniformity suggests evenly distributed pressure.</li>
+      <li><strong>Matter-Antimatter Asymmetry:</strong> May arise due to containment's role in post-Big Bang evolution.</li>
+      <li><strong>Quantum Vacuum Pressure:</strong> Casimir Effect shows pressure exists even in vacuum.</li>
+      <li><strong>Limitations of Gravity Theories:</strong> Failure to unify with quantum mechanics supports pressure-based modeling.</li>
+      <li><strong>Cosmic Boundaries:</strong> Suggest containment, since infinite energy would be required otherwise.</li>
+      <li><strong>Architectural Analogy:</strong> Universe as a bubble or dome balanced by internal pressure and external shell.</li>
+      <li><strong>Biological/Natural Pressure Systems:</strong> From brain to oceans, pressure governs stable systems, possibly the universe too.</li>
     </ol>
 
-    <h2>3. Cosmic Rupture Hypothesis</h2>
+    <h2>3. Cosmic Explosion — Theoretical End</h2>
     <p>
-      If internal pressure surpasses containment strength, a cosmic rupture may occur, disintegrating galaxies and matter.
+      If internal pressure surpasses the capacity of external containment, the universe may rupture, destroying all galaxies and matter.
     </p>
 
-    <h2>4. Ocean Impact</h2>
+    <h2>4. First Impact — Sea Reaction</h2>
     <p>
-      Earth's oceans, being incompressible, would react first, absorbing shockwaves with devastating effect.
+      Water is incompressible. Earth's oceans would be the first to respond violently to such an event.
     </p>
 
-    <h2>5. Why Objects Stay Suspended</h2>
+    <h2>5. Suspension of Bodies in Space</h2>
     <p>
-      Rather than gravity alone, CPC explains that objects float due to balanced cosmic pressure around them.
+      According to CPC, objects are suspended in space not just due to gravity, but due to pressure equilibrium.
     </p>
 
-    <h2>6. Light and Pressure</h2>
+    <h2>6. Light Under Pressure</h2>
     <p>
-      Light's behavior is affected by cosmic pressure, which can alter its speed and trajectory, offering new views on redshift and lensing.
+      The speed and path of light may be influenced by pressure gradients. This offers alternative explanations to redshift and gravitational lensing.
     </p>
 
-    <h2>7. Key Theoretical Equations</h2>
+    <h2>7. Theoretical Equations</h2>
+    <p><strong>Balance:</strong> Pi × A = Fc × A ⇒ Pi = Fc</p>
+    <p><strong>Orbital Pressure:</strong> Pr(r) = P₀ / (1 + k r²)</p>
+    <p><strong>Redshift due to Pressure Gradient:</strong> Δλ ∝ ∇P · d</p>
+
+    <h2>8. Flaws in Mainstream Models</h2>
     <ul>
-      <li><strong>Equilibrium Condition:</strong> Pi × A = Fc × A → Pi = Fc</li>
-      <li><strong>Orbital Pressure Profile:</strong> Pr(r) = P₀ / (1 + k r²)</li>
-      <li><strong>Redshift & Pressure Gradient:</strong> Δλ ∝ ∇P · d</li>
+      <li>General Relativity: Fails to explain expansion without dark energy.</li>
+      <li>Newtonian Gravity: Inapplicable at cosmic scale and neglects pressure.</li>
+      <li>Dark Energy Models: Based on invisible assumptions.</li>
+      <li>String Theory: Overly complex and lacks empirical proof.</li>
     </ul>
 
-    <h2>8. Weaknesses of Mainstream Theories</h2>
-    <ul>
-      <li><strong>General Relativity:</strong> Requires dark energy to explain accelerated expansion.</li>
-      <li><strong>Newtonian Gravity:</strong> Fails on cosmic scales.</li>
-      <li><strong>Dark Energy Models:</strong> Rely on unobservable entities.</li>
-      <li><strong>String Theory:</strong> Complex and lacks experimental proof.</li>
-    </ul>
-
-    <h2>9. Advantages of CPC Theory</h2>
+    <h2>9. Strengths of CPC</h2>
     <ul>
       <li>Explains expansion without dark energy.</li>
-      <li>Eliminates singularities.</li>
-      <li>Inspired by architecture and natural systems.</li>
+      <li>Free of singularities.</li>
+      <li>Parallels with real-world pressure systems.</li>
     </ul>
 
     <h2>10. Conclusion</h2>
     <p>
-      CPC Theory offers a comprehensive model explaining cosmic structure and behavior through the lens of pressure and containment — inviting further theoretical and observational inquiry.
+      The CPC theory provides a pressure-based model for understanding cosmic structure and movement, avoiding shortcomings of gravity-centric models.
     </p>
 
     <h2>11. References</h2>
-    <ol>
-      <li>Misner, Thorne, Wheeler – <em>Gravitation</em> (1973)</li>
-      <li>Padmanabhan – <em>Structure Formation in the Universe</em> (1993)</li>
-      <li>Peebles – <em>Principles of Physical Cosmology</em> (1993)</li>
-      <li>Riess et al. – <em>The Astronomical Journal</em> (1998)</li>
-      <li>Verlinde – <em>Emergent Gravity and the Dark Universe</em> (2017)</li>
-      <li>Zee – <em>Quantum Field Theory in a Nutshell</em> (2010)</li>
-      <li>Weinberg – <em>Gravitation and Cosmology</em> (1972)</li>
-    </ol>
+    <ul>
+      <li>Misner, C. W., Thorne, K. S., & Wheeler, J. A. (1973). <em>Gravitation</em>. W. H. Freeman and Company.</li>
+      <li>Padmanabhan, T. (1993). <em>Structure Formation in the Universe</em>. Cambridge University Press.</li>
+      <li>Peebles, P. J. E. (1993). <em>Principles of Physical Cosmology</em>. Princeton University Press.</li>
+      <li>Riess, A. G., et al. (1998). Observational Evidence from Supernovae for an Accelerating Universe. <em>The Astronomical Journal</em>, 116(3), 1009–1038.</li>
+      <li>Verlinde, E. (2017). Emergent Gravity and the Dark Universe. <em>SciPost Physics</em>, 2(3), 016.</li>
+      <li>Zee, A. (2010). <em>Quantum Field Theory in a Nutshell</em>. Princeton University Press.</li>
+      <li>Weinberg, S. (1972). <em>Gravitation and Cosmology</em>. Wiley.</li>
+    </ul>
+
     <h2>12. Illustrations</h2>
     <img src="images/internal-pressure.png" alt="Internal Cosmic Pressure" />
     <img src="images/cpc-layers.png" alt="Containment Layers" />
@@ -164,12 +177,12 @@
     <img src="images/5f2e1bc6-eed2-49ad-9207-af9694a4a2fe.png" alt="Additional Image 2" />
 
     <p style="margin-top:40px; font-weight:600; text-align:center;">
-  </main>
+      © 2025 Usman Madni — All rights reserved
+    </p>
+  </div>
 
   <footer>
-    <p>© 2025 Usman Madni — All rights reserved</p>
+    <p>A pressure-based alternative framework for understanding the universe</p>
   </footer>
 </body>
-
-
 </html>
