--- a/index.html
+++ b/index.html
@@ -185,4 +185,14 @@
     <p>A pressure-based alternative framework for understanding the universe</p>
   </footer>
 </body>
+  <div style="margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 10px; background-color: #f8f8f8;">
+  <h3>📘 View Full Paper on Zenodo</h3>
+  <p>
+    You can access the official version of the Cosmic Pressure and Containment theory on Zenodo:
+  </p>
+  <a href="https://zenodo.org/records/15828369" target="_blank" style="color: white; background-color: #0077cc; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold;">
+    🔗 Read on Zenodo
+  </a>
+</div>
+
 </html>
