--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
     <p>A pressure-based alternative framework for understanding the universe</p>
   </footer>
 </body>
+  <nav style="background-color: #004d80; padding: 10px; border-radius: 5px; margin-bottom: 20px;">
+  <ul style="list-style: none; margin: 0; padding: 0; display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;">
+    <li><a href="index.html" style="color: white; text-decoration: none; font-weight: bold;">English</a></li>
+    <li><a href="urdu.html" style="color: white; text-decoration: none; font-weight: bold;">اردو</a></li>
+    <li><a href="arabic.html" style="color: white; text-decoration: none; font-weight: bold;">العربية</a></li>
+    <li><a href="argument.html" style="color: white; text-decoration: none; font-weight: bold;">Argument</a></li>
+    <li><a href="urdu-argument.html" style="color: white; text-decoration: none; font-weight: bold;">دلائل اردو</a></li>
+    <li><a href="cosmic-energy.html" style="color: white; text-decoration: none; font-weight: bold;">Cosmic Energy</a></li>
+  </ul>
+</nav>
+
   <div style="margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 10px; background-color: #f8f8f8;">
   <h3>📘 View Full Paper on Zenodo</h3>
   <p>
