--- a/urdu.html
+++ b/urdu.html
@@ -73,6 +73,16 @@
   </style>
 </head>
 <body>
+<nav style="background-color: #004d80; padding: 10px; border-radius: 5px; margin-bottom: 20px;">
+  <ul style="list-style: none; margin: 0; padding: 0; display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;">
+    <li><a href="index.html" style="color: white; text-decoration: none; font-weight: bold;">English</a></li>
+    <li><a href="urdu.html" style="color: white; text-decoration: none; font-weight: bold;">اردو</a></li>
+    <li><a href="arabic.html" style="color: white; text-decoration: none; font-weight: bold;">العربية</a></li>
+    <li><a href="argument.html" style="color: white; text-decoration: none; font-weight: bold;">Argument</a></li>
+    <li><a href="urdu-argument.html" style="color: white; text-decoration: none; font-weight: bold;">دلائل اردو</a></li>
+    <li><a href="cosmic-energy.html" style="color: white; text-decoration: none; font-weight: bold;">Cosmic Energy</a></li>
+  </ul>
+</nav>
 
   <header>
     <h1>کائناتی دباؤ اور گھیراؤ: ایک نظریاتی خاکہ</h1>
