--- a/cosmic-energy.html
+++ b/cosmic-energy.html
@@ -42,6 +42,13 @@
     }
   </style>
 </head>
+  <nav>
+    <a href="index.html">🏠 ہوم</a>
+    <a href="urdu.html">اردو</a>
+    <a href="arabic.html">عربی</a>
+    <a href="argument.html">Scientific Argument</a>
+    <a href="urdu-argument.html">دلائل</a>
+    <a href="about.html">تعارف</a>
 <body>
   <div class="container">
     <h1>Cosmic Pressure and Containment Theory</h1>
